[gd_scene load_steps=12 format=3 uid="uid://cgnm67rj1gqh"]

[ext_resource type="Texture2D" uid="uid://drhnu5iewr1pd" path="res://Assets/Tiles/Legacy-Dungeon_V0.2_vacaroxa/Final/Assets/Assets.png" id="1_datnk"]
[ext_resource type="Script" path="res://Scenes/FallingSpikes/falling_spikes.gd" id="1_uquwn"]
[ext_resource type="AudioStream" uid="uid://c4d0jolnh35bq" path="res://Assets/Sound/Sfx/assette-rattle_88bpm_E_minor.wav" id="3_p0q4b"]
[ext_resource type="AudioStream" uid="uid://bkij5l3ih41ot" path="res://Assets/Sound/Sfx/10_Battle_SFX/35_Miss_Evade_02.wav" id="4_tcxmk"]
[ext_resource type="AudioStream" uid="uid://d2ng8gt8ccikb" path="res://Assets/Sound/Sfx/443806__deathscyp__spiketrap.wav" id="5_lbhur"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t026k"]
size = Vector2(16, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ic17i"]
size = Vector2(22, 79)

[sub_resource type="Animation" id="Animation_ggix1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Assets:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(8, 5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Assets:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_1ght0"]
resource_name = "Respawn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Assets:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, false, true, false, true]
}

[sub_resource type="Animation" id="Animation_icw5a"]
resource_name = "Shake"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Assets:position")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(8, 5), Vector2(8, 6), Vector2(8, 5), Vector2(8, 4), Vector2(8, 5), Vector2(8, 6), Vector2(8, 5), Vector2(8, 4), Vector2(8, 5), Vector2(8, 6), Vector2(8, 5), Vector2(8, 4), Vector2(8, 5), Vector2(8, 6), Vector2(8, 5), Vector2(8, 4), Vector2(8, 5), Vector2(8, 6), Vector2(8, 5), Vector2(8, 4), Vector2(8, 5)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"fall"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dasey"]
_data = {
"RESET": SubResource("Animation_ggix1"),
"Respawn": SubResource("Animation_1ght0"),
"Shake": SubResource("Animation_icw5a")
}

[node name="FallingSpikes" type="Node2D"]
script = ExtResource("1_uquwn")

[node name="Assets" type="Sprite2D" parent="."]
position = Vector2(8, 5)
texture = ExtResource("1_datnk")
region_enabled = true
region_rect = Rect2(80, 128, 16, 11)

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(8, 4)
shape = SubResource("RectangleShape2D_t026k")

[node name="Detection" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
position = Vector2(8, 39.5)
shape = SubResource("RectangleShape2D_ic17i")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dasey")
}

[node name="sfx_shake" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_p0q4b")
bus = &"Sfx"

[node name="sfx_fall" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_tcxmk")
volume_db = 8.743
pitch_scale = 0.51
bus = &"Sfx"

[node name="sfx_hit_player" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_lbhur")
pitch_scale = 0.76
bus = &"Sfx"

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_entered" from="Detection" to="." method="_on_detection_area_entered"]
